crates/swarm-abm-derive/tests/ui/bad_variant_named_fields.stderr
error: each MultiAgent variant must wrap exactly one type, e.g. `Fox(Fox)` — unit variants and named fields aren't supported
 --> tests/ui/bad_variant_named_fields.rs:5:5
  |
5 |     Foo { x: i32 },
  |     ^^^^^^^^^^^^^^
