crates/swarm-abm-derive/tests/ui/bad_variant_named_fields.rs
use swarm_abm_derive::MultiAgent;

#[derive(MultiAgent)]
enum Bad {
    Foo { x: i32 },
}

fn main() {}
